--- a/proposal_latex/proposal.bib
+++ b/proposal_latex/proposal.bib
@@ -207,3 +207,13 @@ year={2016}
   publisher={Springer}
 }
 
+@article{botsinis2013quantum,
+  title={Quantum search algorithms, quantum wireless, and a low-complexity maximum likelihood iterative quantum multi-user detector design},
+  author={Botsinis, Panagiotis and Ng, Soon Xin and Hanzo, Lajos},
+  journal={IEEE access},
+  volume={1},
+  pages={94--122},
+  year={2013},
+  publisher={IEEE}
+}
+
